--- a/theme.dsngrid.com/blackdsn/dark/personal.html
+++ b/theme.dsngrid.com/blackdsn/dark/personal.html
@@ -686,7 +686,7 @@
         <div class="p-relative box-img ">
             <div class="img-box-parallax before-z-index " data-dsn-triggerhook="top" data-dsn-grid="move-up"
                  data-overlay="4">
-                <img src='assets/img/head-personal.jpg' class=" cover-bg-img has-direction" alt=''/>
+                <img src='assets/img/profile2.jpg' class=" cover-bg-img has-direction" alt=''/>
             </div>
             <ul class="dsn-socials box-social">
                 <li>
@@ -730,14 +730,14 @@
             <div class="box-content-inner">
                 <h1 class="title text-upper">
                     <span class="letter-stroke d-block">I'M</span>
-                    <span class="p-10 background-theme heading-color">john doe</span>
+                    <span class="p-10 background-theme heading-color">HOK Sochetra</span>
                 </h1>
 
                 <h6 class="sm-title-block mt-30">
-                    Architect & Spatial Planner
+                    Full Stack (Mobile App & Website)
                 </h6>
                 <p class="sm-title-block border-top border-bottom mt-30 pt-20 pb-20 max-w570">
-                    “Architecture is the learned game, correct and magnificent, of forms assembled in the light.”
+                    “Offer service to build App and Web on diverse platform.”
                 </p>
                 <div class="dsn-def-btn dsn-hover-icon dsn-icon-heading-color mt-30">
                     <a class="dsn-btn background-section move-circle has-icon-left" href="about.html"
@@ -771,9 +771,7 @@
                         </div>
                     </div>
                     <p class="max-w750 mt-30">
-                        In my work, I try to find the right balance between form and function. From technical drawings,
-                        all the way to the photographic renders, and the actual representations of my work as a
-                        designer, my philosophy is that of simplicity.
+                        Nowaday, I work as a freelance for Mobile App project and learning backend to become full stack developer.
                     </p>
                     <div class="d-grid grid-sm-3 mt-30 dsn-skills">
                         <div class="dsn-skills-item grid-item">
@@ -788,7 +786,7 @@
                                         </svg>
                                         <h4 class="dsn-number-award number sm-title-block v-middle">80%</h4>
                                     </div>
-                                    <h5 class="dsn-title-award sm-title-block mt-30">UI Design</h5>
+                                    <h5 class="dsn-title-award sm-title-block mt-30">Mobile App(Flutter)</h5>
                                 </div>
                             </div>
                         </div>
@@ -802,9 +800,9 @@
                                                     class="progress-bar__progress js-progress-bar dsn-animate-skill"
                                                     data-dsn-progress="75"/>
                                         </svg>
-                                        <h4 class="dsn-number-award number sm-title-block v-middle">75%</h4>
+                                        <h4 class="dsn-number-award number sm-title-block v-middle">50%</h4>
                                     </div>
-                                    <h5 class="dsn-title-award sm-title-block mt-30">UX Design</h5>
+                                    <h5 class="dsn-title-award sm-title-block mt-30">UX UI Design</h5>
                                 </div>
                             </div>
                         </div>
@@ -818,9 +816,9 @@
                                                     class="progress-bar__progress js-progress-bar dsn-animate-skill"
                                                     data-dsn-progress="70"/>
                                         </svg>
-                                        <h4 class="dsn-number-award number sm-title-block v-middle">70%</h4>
+                                        <h4 class="dsn-number-award number sm-title-block v-middle">40%</h4>
                                     </div>
-                                    <h5 class="dsn-title-award sm-title-block mt-30">Product Design</h5>
+                                    <h5 class="dsn-title-award sm-title-block mt-30">Website</h5>
                                 </div>
                             </div>
                         </div>
@@ -829,7 +827,7 @@
             </div>
             <div class="box-img p-relative">
                 <div class="img-box-parallax before-z-index" data-dsn="parallax" data-overlay="0">
-                    <img src='assets/img/p-1.jpg' class="cover-bg-img" alt=''/>
+                    <img src='assets/img/profile1.jpg' class="cover-bg-img" alt=''/>
                 </div>
             </div>
 
